--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  rive: ^0.13.20
+  flutter_rating: ^2.0.2
+  rating_bar_custom: ^0.0.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  rive: ^0.13.20
-  flutter_rating: ^2.0.2
+  
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
